--- a/src/components/SriYantra/SriYantra.module.css
+++ b/src/components/SriYantra/SriYantra.module.css
@@ -38,6 +38,17 @@
     width: 100%;
     height: 100%;
     opacity: 0.7;
+    animation: spin 20s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .authenticCore {
