--- a/src/components/SriYantra/SriYantra.module.css
+++ b/src/components/SriYantra/SriYantra.module.css
@@ -37,8 +37,13 @@
 .mainSkeletonSvg {
     width: 100%;
     height: 100%;
-    opacity: 0.7;
-    animation: spin 20s linear infinite;
+    opacity: 0.9;
+    animation: spin 15s linear infinite;
+}
+
+.mainSkeletonSvg g {
+    animation: blink 0.1s step-end infinite alternate;
+    /* Ultra-fast flicker */
 }
 
 @keyframes spin {
@@ -48,6 +53,20 @@
 
     to {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes blink {
+    0% {
+        stroke: #000000;
+    }
+
+    50% {
+        stroke: #FFFFFF;
+    }
+
+    100% {
+        stroke: #000000;
     }
 }
 
